ubuntu-image (1.5+18.10ubuntu1) UNRELEASED; urgency=medium

  * Fix bug with setting file owners in classic.  (LP: #1783577)
  * Add --filesystem option for classic. This gives us the option to use an
    existing unpacked root file system instead of calling live-build to create
    it.  (LP: #1782795)

 -- Alfonso Sanchez-Beato (email Canonical) <alfonso.sanchez-beato@canonical.com>  Tue, 21 Aug 2018 14:45:48 +0200

ubuntu-image (1.4+18.10ubuntu2) cosmic; urgency=medium

  * Demote the qemu-user-static dependency to Suggests, modify the code to
    gracefully handle the lack of qemu binaries for cross-compilation.
    (LP: #1788177)
  * Add missing information about UBUNTU_IMAGE_QEMU_USER_STATIC_PATH to the
    manpage.

 -- Łukasz 'sil2100' Zemczak <lukasz.zemczak@ubuntu.com>  Tue, 21 Aug 2018 15:25:59 +0200

ubuntu-image (1.4+18.10ubuntu1) cosmic; urgency=medium

  * Add support for classic cross-compilation, add qemu-user-static as a
    dependency.  (LP: #1772061)
  * Work-around the API rate limit exceeded failures from github in the
    haschangelog test case by re-writing it not to use python3-github anymore
    and instead check for the PR trivial label manually.  (LP: #1690081)
  * Work-around Permission denied errors printing to stderr whenever parted is
    imported, causing some of our basic autopkgtests failing.  (LP: #1775085)
  * Fix some coverage and autopkgtest failures per changes in the environment.
    Switch to using deb-packaged voluptuous.  (LP: #1782313)
  * Add the new connections: stanza to the gadget.yaml parser.  (LP: #1780217)

 -- Łukasz 'sil2100' Zemczak <lukasz.zemczak@ubuntu.com>  Fri, 20 Jul 2018 16:43:51 +0200

ubuntu-image (1.3+18.04ubuntu2) bionic; urgency=medium

  * Ignore the E722 error on our bare-except statements as those are intended,
    it's a way for us to clean up on errors.  (LP: #1741246)

 -- Łukasz 'sil2100' Zemczak <lukasz.zemczak@ubuntu.com>  Thu, 04 Jan 2018 13:10:46 +0100
