@@ -1,11 +1,15 @@
 ubuntu-image (1.5+18.10ubuntu1) UNRELEASED; urgency=medium
 
+  [ Alfonso Sanchez-Beato (email Canonical) ]
   * Fix bug with setting file owners in classic.  (LP: #1783577)
   * Add --filesystem option for classic. This gives us the option to use an
     existing unpacked root file system instead of calling live-build to create
     it.  (LP: #1782795)
 
- -- Alfonso Sanchez-Beato (email Canonical) <alfonso.sanchez-beato@canonical.com>  Tue, 21 Aug 2018 14:45:48 +0200
+  [ Łukasz 'sil2100' Zemczak ]
+  * Fix handling of --extra-ppas for classic builds.  (LP: #1790708)
+
+ -- Łukasz 'sil2100' Zemczak <lukasz.zemczak@ubuntu.com>  Tue, 04 Sep 2018 17:49:59 +0200
 
 ubuntu-image (1.4+18.10ubuntu2) cosmic; urgency=medium
 
